[tool.poetry]
name = "dynamic_programming"
version = "0.1.0"
description = ""
authors = ["SESA461392 <Wei.Tian@se.com>"]

[tool.poetry.dependencies]
python = "^3.7"
mkdocs = "^1.4.3"
mkdocstrings = "^0.18"
mkdocs-material = "^9.1.17"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
